# git-llm-analyzer

./: .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  setup.cfg
src/: config.py  file_processing.py  questions.py  utils.py
